experimenting with Emmet

--- a/Barcelona.html
+++ b/Barcelona.html
@@ -11,18 +11,28 @@
 				<li>San Franscisco 49ers</li>
 				<li>San Franscisco 49ers</li>
 				<li>Barcelona FC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
+				<li>Barcelona FCFCFC</li>
 				<li>Barcelona FC</li>
 				<li>Barcelona FC</li>
 				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
-				<li>Barcelona FC</li>
+				<ul></ul>
+				<ul>
+					<li></li>
+				</ul>
+				<ul id="nav">
+					<li class="item1"><a href="">Item 1</a></li>
+					<li class="item2"><a href="">Item 2</a></li>
+					<li class="item3"><a href="">Item 3</a></li>
+					<li class="item4"><a href="">Item 4</a></li>
+				</ul>
 				<li>Barcelona FC</li>
 				<li>Barcelona FC</li>
 				<li>Barcelona FC</li>
